    base with a standard configuration.  Fix all issues found by cppcheck.

    Rework the check-valgrind target to use the new C TAP Harness valgrind
    support and automatically check the valgrind log files for errors at
    the end of the test suite.  This catches the bad free that caused the
    security issue in 3.14.

    Update to rra-c-util 7.1:

    * Avoid spurious test failures from the network library.
    * Fix configure output when a Kerberos install prefix was provided.
    * Fix new warnings in GCC 7 and add new warning flags.
    * Fix all warnings from the Clang static analyzer.
    * Fix warnings under Clang with most warnings enabled.
    * Define UINT32_MAX for systems that don't have it.
    * Support running remctld under valgrind for memory leak testing.
    * Update the valgrind suppression file.
    * Add SPDX-License-Identifier headers to all substantial source files.

    Update to C TAP Harness 4.3:

    * Add support for valgrind testing via test list options.
    * Report test failures as left and right, not wanted and seen.
    * Fix is_string comparisons involving NULL pointers and "(null)".
    * Add SPDX-License-Identifier headers to all substantial source files.

remctl 3.14 (2018-03-31)

    SECURITY: Fix use-after-free and double-free when handling the sudo
    option in the remctld and remctl-shell server.  For remctl-shell, this
    will occasionally produce a spurious non-zero exit status for a
    command that succeeded.  For remctld, the normal consequence is a
    server process crash after running a command with the sudo option, but
    it may be possible (albeit difficult) for a streaming client to abuse
    this bug to execute an arbitrary command on the server or corrupt
    server memory.  Thanks, Santosh Ananthakrishnan.  (CVE-2018-0493)

remctl 3.13 (2016-10-10)

    remctl-shell now also supports being run as a forced command from
    authorized_keys (or other methods).  This may be preferrable to using